--- a/inyro/yunjin2.html
+++ b/inyro/yunjin2.html
@@ -8,13 +8,20 @@
 <h3>로그인</h3>
 <hr>
 <div class="container">
-    <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Username" name="uname" required>
+    <label for="id"><b>Id</b></label>
+    <input type="text" placeholder="아이디" name="id" required>
     <br>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Password" name="psw" required>
+    <input type="password" placeholder="비밀번호" name="psw" required>
 
-    <button type="submit">Login</button>
+    <button type="submit">로그인</button>
+    <br><br>
+
+    <button type="button">ID찾기</button>
+    <span>|</span>
+    <button type="button">비밀번호찾기</button>
+    <span>|</span>
+    <button type="button">회원가입</button>
   </body>
 </html>
