--- a/inyro/myongyeon8.html
+++ b/inyro/myongyeon8.html
@@ -1,10 +1,20 @@
-<div class="container">
-  <form action="/action_page.php">
-    <h3>비밀번호 확인</h3>
-    <!-- <label for="usrname">Username</label>
-    <input type="text" id="usrname" name="usrname" required> -->
-    <label for="psw">Password</label>
-    <input type="password" id="psw" name="psw">
-    <input type="submit" value="ENTER">
-  </form>
-</div>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>비밀번호 확인</title>
+  </head>
+  <body>
+    <div class="container">
+      <form action="/action_page.php">
+        <h3>비밀번호 확인</h3>
+        <!-- <label for="usrname">Username</label>
+        <input type="text" id="usrname" name="usrname" required> -->
+        <label for="psw">Password</label>
+        <input type="password" id="psw" name="psw">
+        <input type="submit" value="ENTER">
+      </form>
+    </div>
+
+  </body>
+</html>
