--- a/inyro/myongyeon16.html
+++ b/inyro/myongyeon16.html
@@ -3,15 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title>Calendar</title>
-    <link rel="stylesheet" type="text/css" href="${ctx }/inyro/fullcalendar20/fullcalendar.css"/>
-    <link rel="stylesheet" type="text/css" href="${ctx }/inyro/fullcalendar20/daygrid.css"/>
-    <link rel="stylesheet" type="text/css" href="${ctx }/inyro/fullcalendar20/timegrid.css"/>
+    <style>
+    @import url(fullcalendar.css);
+    @import url(daygrid.css);
+    @import url(timegrid.css);</style>
+    <script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', function() {
+      var calendarEl = document.getElementById('calendar');
+
+      var calendar = new FullCalendar.Calendar(calendarEl, {
+        plugins: [ 'interaction', 'dayGrid', 'timeGrid' ],
+        defaultView: 'dayGridMonth',
+        defaultDate: new Date(),
+        header: {
+          left: 'prev,next today',
+          center: 'title',
+          right: ''
+        },
+      });
+      calendar.render();
+    });
+    </script>
   </head>
   <body>
-    <script type="text/javascript" src="<c:url value='/inyro/fullcalendar20/fullcalendar.js'/>"></script>
-    <script type="text/javascript" src="<c:url value='/inyro/fullcalendar20/daygrid.js'/>"></script>
-    <script type="text/javascript" src="<c:url value='/inyro/fullcalendar20/timegrid.js'/>"></script>
-    <script type="text/javascript" src="<c:url value='/inyro/fullcalendar20/interaction.js'/>"></script>
+    <script type="text/javascript" src="<c:url value='/webproject/inyro/fullcalendar20/fullcalendar.js'/>"></script>
+    <script type="text/javascript" src="<c:url value='/webproject/inyro/fullcalendar20/daygrid.js'/>"></script>
+    <script type="text/javascript" src="<c:url value='/webproject/inyro/fullcalendar20/timegrid.js'/>"></script>
+    <script type="text/javascript" src="<c:url value='/webproject/inyro/fullcalendar20/interaction.js'/>"></script>
     <div id='calendar'></div>
   </body>
 </html>
