--- a/inyro/yunjin2.html
+++ b/inyro/yunjin2.html
@@ -3,6 +3,10 @@
   <head>
 <meta charset="utf-8">
 <title>로그인</title>
+<style>
+  @import url(menubar.css);
+  @import url(menubarpost.css);
+</style>
   </head>
   <body>
 <h3>로그인</h3>
