--- a/inyro/yejin13.html
+++ b/inyro/yejin13.html
@@ -2,22 +2,88 @@
 <html>
   <head>
 <meta charset="utf-8">
+<style>
+  @import url(menubar.css);
+  @import url(menubarpost.css);
+  @import url(writeform.css);
+</style>
+<script>
+function openCity(evt, cityName) {
+  // Declare all variables
+  var i, tabcontent, tablinks;
+
+  // Get all elements with class="tabcontent" and hide them
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+
+  // Get all elements with class="tablinks" and remove the class "active"
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+
+  // Show the current tab, and add an "active" class to the link that opened the tab
+  document.getElementById(cityName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+</script>
   </head>
   <body>
-<button type="button">이니로</button>
-<hr>
-<div>
-  <button type="button" onclick="location.href='yejin14.html'">1. 공지</button>
-  <button type="button" onclick="location.href='yejin12.2.html'">2. 게시판</button>
-  <button>3. 갤러리</button>
-</div>
-<div>
-  <h3>(공지)글 작성하기</h3>
-  <form>
-    <input type="text" placeholder="제목"> <br>
-    <input type="text" placeholder="내용을 입력해주세요.">
+    <button type="button">이니로</button>
+    <hr>
+    <div class="topnav">
+      <a class="active" href="#introduction">Introduction</a>
+      <a href="#news">News</a>
+      <a href="#calender">Calender</a>
+      <a href="#about">About</a>
+    </div>
+
+    <!-- Tab links -->
+    <div class="tab">
+      <button class="tablinks" onclick="openCity(event, 'New')">공지</button>
+      <button class="tablinks" onclick="openCity(event, 'Post')">게시판</button>
+      <button class="tablinks" onclick="openCity(event, 'Photo')">갤러리</button>
+    </div>
+
+    <div class="container">
+  <form action="action_page.php">
+    <h3>글작성하기</h3>
+    <div class="row">
+      <div class="col-25">
+        <label for="fname">이름</label>
+      </div>
+      <div class="col-75">
+        <input type="text" id="fname" name="firstname" placeholder="이름을 입력하세요.">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-25">
+        <label for="country">종류</label>
+      </div>
+      <div class="col-75">
+        <select id="country" name="country">
+          <option value="australia" selected>공지</option>
+          <option value="canada">게시판</option>
+          <option value="usa">갤러리</option>
+        </select>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-25">
+        <label for="subject">내용</label>
+      </div>
+      <div class="col-75">
+        <textarea id="subject" name="subject" placeholder="내용을 입력하세요." style="height:100px"></textarea>
+      </div>
+    </div>
+    <div class="row">
+      <input type="submit" value="Submit">
+    </div>
   </form>
-  <button onclick="location.href='yejin14.html'">등록하기</button>
 </div>
+
+
   </body>
 </html>
