--- a/inyro/myongyeon16.html
+++ b/inyro/myongyeon16.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Calendar</title>
+    <script type="text/javascript" src="C:\Bitnami\wampstack-7.3.17-1\apache2\htdocs\webproject\inyro\fullcalendar20\fullcalendar.js"></script>
+    <script type="text/javascript" src="C:\Bitnami\wampstack-7.3.17-1\apache2\htdocs\webproject\inyro\fullcalendar20\interaction.js"></script>
+    <script type="text/javascript" src="C:\Bitnami\wampstack-7.3.17-1\apache2\htdocs\webproject\inyro\fullcalendar20\timegrid.js"></script>
+    <script type="text/javascript" src="C:\Bitnami\wampstack-7.3.17-1\apache2\htdocs\webproject\inyro\fullcalendar20\daygrid.js"></script>
     <style>
     @import url(fullcalendar.css);
     @import url(daygrid.css);
@@ -26,10 +30,6 @@
     </script>
   </head>
   <body>
-    <script type="text/javascript" src="<c:url value='/webproject/inyro/fullcalendar20/fullcalendar.js'/>"></script>
-    <script type="text/javascript" src="<c:url value='/webproject/inyro/fullcalendar20/daygrid.js'/>"></script>
-    <script type="text/javascript" src="<c:url value='/webproject/inyro/fullcalendar20/timegrid.js'/>"></script>
-    <script type="text/javascript" src="<c:url value='/webproject/inyro/fullcalendar20/interaction.js'/>"></script>
     <div id='calendar'></div>
   </body>
 </html>
