--- a/inyro/myongyeon8.html
+++ b/inyro/myongyeon8.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="container">
-      <form action="/action_page.php">
+      <form action="myongyeon9.html">
         <h3>비밀번호 확인</h3>
         <!-- <label for="usrname">Username</label>
         <input type="text" id="usrname" name="usrname" required> -->
