--- a/inyro/yunjin3.html
+++ b/inyro/yunjin3.html
@@ -13,7 +13,7 @@
     <br>
 
     <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="이메일주소" name="email" required>
+    <input type="text" placeholder="이메일주소"  name="email" required>
 
     <button type="submit">인증번호받기</button>
     <br>
@@ -26,7 +26,7 @@
     <hr>
     <p>아이디는 ****** 입니다.</p>
 
-    <button type="submit">로그인하기</button>
+    <button type="submit" onclick="location.href='yunjin2.html'">로그인하기</button>
 
   </body>
 </html>
