--- a/inyro/yunjin4.html
+++ b/inyro/yunjin4.html
@@ -37,7 +37,7 @@
     <span>일치합니다.</span>
     <br>
 
-    <button type="submit">로그인하기</button>
+    <button type="submit" onclick="location.href='yunjin2.html'">로그인하기</button>
 
   </body>
 </html>
