--- a/inyro/yunjin2.html
+++ b/inyro/yunjin2.html
@@ -22,10 +22,10 @@
     <button type="submit">로그인</button>
     <br><br>
 
-    <button type="button">ID찾기</button>
+    <button type="button" onclick="location.href='yunjin3.html'">ID찾기</button>
     <span>|</span>
-    <button type="button">비밀번호찾기</button>
+    <button type="button" onclick="location.href='yunjin4.html'">비밀번호찾기</button>
     <span>|</span>
-    <button type="button">회원가입</button>
+    <button type="button" onclick="location.href='yunjin5.html'">회원가입</button>
   </body>
 </html>
