--- a/inyro/yejin13.html
+++ b/inyro/yejin13.html
@@ -31,6 +31,7 @@ function openCity(evt, cityName) {
 </script>
   </head>
   <body>
+
     <button type="button">이니로</button>
     <hr>
     <div class="topnav">
@@ -46,6 +47,54 @@ function openCity(evt, cityName) {
       <button class="tablinks" onclick="openCity(event, 'Post')">게시판</button>
       <button class="tablinks" onclick="openCity(event, 'Photo')">갤러리</button>
     </div>
+
+    <!-- Tab content -->
+    <div id="New" class="tabcontent">
+      <h3>공지</h3>
+      <p>
+        <ol>
+          <li>NAME</li>
+          <li>NAME</li>
+          <li>NAME</li>
+          <li>NAME</li>
+        </oi>
+        <form>
+          <select name="select">
+            <option value="1" selected>제목</option>
+            <option value="2">작성자</option>
+          </select>
+          <input type="search" placeholder="입력하세요.">
+          <input type="button" value="검색하기">
+        </form>
+      </p>
+    </div>
+
+    <div id="Post" class="tabcontent">
+      <h3>게시판</h3>
+      <p>
+        <ol>
+        <li>NAME</li>
+        <li>NAME</li>
+        <li>NAME</li>
+        <li>NAME</li>
+      </oi>
+      <form>
+        <select name="select">
+          <option value="1" selected>제목</option>
+          <option value="2">작성자</option>
+        </select>
+        <input type="search" placeholder="입력하세요.">
+        <input type="button" value="검색하기">
+      </form>
+    </p>
+    </div>
+
+    <div id="Photo" class="tabcontent">
+      <h3>갤러리</h3>
+      <p>Tokyo is the capital of Japan.</p>
+    </div>
+
+
 
     <div class="container">
   <form action="action_page.php">
