--- a/inyro/myongyeon9.html
+++ b/inyro/myongyeon9.html
@@ -20,7 +20,7 @@
               <div class="col-50">
                 <h3>개인정보 수정</h3>
                 <label for="id"> ID</label>
-                <input type="text" id="id" name="id" value=""><br>
+                <input type="text" id="id" name="id" value=getId><br>
 
                 <label for="name"> 이름</label>
                 <input type="text" id="name" name="name" value=getName><br>
