--- a/inyro/yejin13.html
+++ b/inyro/yejin13.html
@@ -7,28 +7,7 @@
   @import url(menubarpost.css);
   @import url(writeform.css);
 </style>
-<script>
-function openCity(evt, cityName) {
-  // Declare all variables
-  var i, tabcontent, tablinks;
 
-  // Get all elements with class="tabcontent" and hide them
-  tabcontent = document.getElementsByClassName("tabcontent");
-  for (i = 0; i < tabcontent.length; i++) {
-    tabcontent[i].style.display = "none";
-  }
-
-  // Get all elements with class="tablinks" and remove the class "active"
-  tablinks = document.getElementsByClassName("tablinks");
-  for (i = 0; i < tablinks.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace(" active", "");
-  }
-
-  // Show the current tab, and add an "active" class to the link that opened the tab
-  document.getElementById(cityName).style.display = "block";
-  evt.currentTarget.className += " active";
-}
-</script>
   </head>
   <body>
 
@@ -41,63 +20,8 @@ function openCity(evt, cityName) {
       <a href="#about">About</a>
     </div>
 
-    <!-- Tab links -->
-    <div class="tab">
-      <button class="tablinks" onclick="openCity(event, 'New')">공지</button>
-      <button class="tablinks" onclick="openCity(event, 'Post')">게시판</button>
-      <button class="tablinks" onclick="openCity(event, 'Photo')">갤러리</button>
-    </div>
-
-    <!-- Tab content -->
-    <div id="New" class="tabcontent">
-      <h3>공지</h3>
-      <p>
-        <ol>
-          <li>NAME</li>
-          <li>NAME</li>
-          <li>NAME</li>
-          <li>NAME</li>
-        </oi>
-        <form>
-          <select name="select">
-            <option value="1" selected>제목</option>
-            <option value="2">작성자</option>
-          </select>
-          <input type="search" placeholder="입력하세요.">
-          <input type="button" value="검색하기">
-        </form>
-      </p>
-    </div>
-
-    <div id="Post" class="tabcontent">
-      <h3>게시판</h3>
-      <p>
-        <ol>
-        <li>NAME</li>
-        <li>NAME</li>
-        <li>NAME</li>
-        <li>NAME</li>
-      </oi>
-      <form>
-        <select name="select">
-          <option value="1" selected>제목</option>
-          <option value="2">작성자</option>
-        </select>
-        <input type="search" placeholder="입력하세요.">
-        <input type="button" value="검색하기">
-      </form>
-    </p>
-    </div>
-
-    <div id="Photo" class="tabcontent">
-      <h3>갤러리</h3>
-      <p>Tokyo is the capital of Japan.</p>
-    </div>
-
-
-
     <div class="container">
-  <form action="action_page.php">
+  <form id="mybutton" action="action_page.php">
     <h3>글작성하기</h3>
     <div class="row">
       <div class="col-25">
