윤진 메뉴바하고 상단바 추가

--- a/inyro/yunjin3.html
+++ b/inyro/yunjin3.html
@@ -3,8 +3,20 @@
   <head>
 <meta charset="utf-8">
 <title>아이디 찾기</title>
+<style>
+  @import url(inyro.css);
+</style>
+<header>
+  <h1>Inyro</h1>
+  <nav>
+    <span onclick="location.href='yunjin2.html'">로그인</span>
+    <span onclick="location.href='yunjin5.html'">회원가입</span>
+    <span onclick="location.href='myongyeon7.html'">프로필</span>
+  </nav>
+</header>
   </head>
   <body>
+    <br><br><br>
 <h3>아이디 찾기</h3>
 <hr>
 <div class="container">
