--- a/inyro/yunjin2.html
+++ b/inyro/yunjin2.html
@@ -4,11 +4,19 @@
 <meta charset="utf-8">
 <title>로그인</title>
 <style>
-  @import url(menubar.css);
-  @import url(menubarpost.css);
+  @import url(inyro.css);
 </style>
+<header>
+  <h1>Inyro</h1>
+  <nav>
+    <span onclick="location.href='yunjin2.html'">로그인</span>
+    <span onclick="location.href='yunjin5.html'">회원가입</span>
+    <span onclick="location.href='myongyeon7.html'">프로필</span>
+  </nav>
+</header>
   </head>
   <body>
+    <br><br><br>
 <h3>로그인</h3>
 <hr>
 <div class="container">
