--- a/inyro/yunjinbar.html
+++ b/inyro/yunjinbar.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="http://localhost/inyro/yunjinbar.css">
 
     <title>바</title>
-    <style media="screen">
+
+    <!-- <style media="screen">
       html, body, div {
 		margin: 0;
 		padding: 0;
@@ -50,7 +52,7 @@ ul li a:hover{
 ul li a:after{
   text-decoration: underline;
 }
-    </style>
+    </style> -->
 
     <script src="inyro/jquery/jquery-3.5.1.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script> -->
@@ -60,12 +62,29 @@ ul li a:after{
   <body>
     <div id="menu">
   <ul id="menu-list">
-      <li> <a href="#">Home</a></li>
-  	  <li> <a href="#">Gallery</a></li>
-  	  <li> <a href="#">Contacts</a></li>
-  	  <li> <a href="#">Blog</a></li>
+      <li> <a id="li1" onclick="changeImg1()">내눈!</a></li>
+  	  <li> <a id="li2" onclick="changeImg2()">골라하비</a></li>
+  	  <li> <a id="li2" onclick="changeImg3()">뚜벅서울</a></li>
+  	  <li> <a id="li3" onclick="changeImg4()">이니로그램</a></li>
    </ul>
    <div id="menu-line"></div>
+   <div class="container">
+    <img id="img" src="apple.jpg" />
+  </div>
+  <script>
+    function changeImg1() {
+      document.getElementById("img").src = "apple.jpg";
+    }
+    function changeImg2() {
+      document.getElementById("img").src = "ddoong.png";
+    }
+    function changeImg3() {
+      document.getElementById("img").src = "jingjing.jpg";
+    }
+    function changeImg4() {
+      document.getElementById("img").src = "spongebob-image.jpg";
+    }
+  </script>
 </div>
 
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js">
