--- a/inyro/myongyeon9.html
+++ b/inyro/myongyeon9.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="utf-8">
   <title>개인정보수정</title>
+  <style media="screen">
+    @import url(inyro.css);
+  </style>
+  <header>
+    <h1>Inyro</h1>
+    <nav>
+      <span onclick="location.href='yunjin2.html'">로그인</span>
+      <span onclick="location.href='yunjin5.html'">회원가입</span>
+      <span onclick="location.href='myongyeon7.html'">프로필</span>
+    </nav>
+  </header>
   <script type="text/javascript">
     var getId=request.getParameter("id");
     var getName=request.getParameter("name");
