--- a/inyro/main1.html
+++ b/inyro/main1.html
@@ -6,19 +6,19 @@
     <style media="screen">
       @import url(inyro.css);
     </style>
+    <header>
+      <h1>Inyro</h1>
+      <nav>
+        <span onclick="location.href='yunjin2.html'">로그인</span>
+        <span onclick="location.href='yunjin5.html'">회원가입</span>
+        <span onclick="location.href='myongyeon7.html'">프로필</span>
+      </nav>
+    </header>
   </head>
-  <header>
-    <h1>Inyro</h1>
-    <nav>
-      <span onclick="location.href='yunjin2.html'">로그인</span>
-      <span onclick="location.href='yunjin5.html'">회원가입</span>
-      <span onclick="location.href='myongyeon7.html'">프로필</span>
-    </nav>
-  </header>
   <body>
     <br>
     <img src="introduce.png" style="float:left;">
-    <div style="float:left;">
+    <div style="float:right;">
       Inyro는 상명대학교 코딩 동아리입니다. 아주 좋군요.
      </div>
   </body>
