--- a/inyro/myongyeon7.html
+++ b/inyro/myongyeon7.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="utf-8">
   <title>개인정보</title>
+  <style media="screen">
+    @import url(inyro.css);
+  </style>
+  <header>
+    <h1>Inyro</h1>
+    <nav>
+      <span onclick="location.href='yunjin2.html'">로그인</span>
+      <span onclick="location.href='yunjin5.html'">회원가입</span>
+      <span onclick="location.href='myongyeon7.html'">프로필</span>
+    </nav>
+  </header>
   </head>
   <body>
         <div class="container">
