--- a/inyro/yejin13.html
+++ b/inyro/yejin13.html
@@ -3,16 +3,20 @@
   <head>
 <meta charset="utf-8">
 <style>
+  @import url(inyro.css);
   @import url(menubar.css);
-  @import url(menubarpost.css);
   @import url(writeform.css);
 </style>
-
+<header>
+  <h1>Inyro</h1>
+  <nav>
+    <span onclick="location.href='yunjin2.html'">로그인</span>
+    <span onclick="location.href='yunjin5.html'">회원가입</span>
+    <span onclick="location.href='myongyeon7.html'">프로필</span>
+  </nav>
+</header>
   </head>
   <body>
-
-    <button type="button">이니로</button>
-    <hr>
     <div class="topnav">
       <a class="active" href="#introduction">Introduction</a>
       <a href="#news">News</a>
