--- a/inyro/main1.html
+++ b/inyro/main1.html
@@ -14,6 +14,12 @@
         <span onclick="location.href='myongyeon7.html'">프로필</span>
       </nav>
     </header>
+    <div class="topnav">
+      <a class="active" href="#introduction">Introduction</a>
+      <a href="#news">News</a>
+      <a href="#calender">Calender</a>
+      <a href="#about">About</a>
+    </div>
   </head>
   <body>
     <br>
