--- a/inyro/yunjin2.html
+++ b/inyro/yunjin2.html
@@ -5,6 +5,7 @@
 <title>로그인</title>
 <style>
   @import url(inyro.css);
+  @import url(menubar.css);
 </style>
 <header>
   <h1>Inyro</h1>
@@ -14,6 +15,14 @@
     <span onclick="location.href='myongyeon7.html'">프로필</span>
   </nav>
 </header>
+<!-- <nav>
+  <div class="topnav">
+    <a class="active" href="#introduction">Introduction</a>
+    <a href="#news">News</a>
+    <a href="#calender">Calender</a>
+    <a href="#about">About</a>
+  </div>
+</nav> -->
   </head>
   <body>
     <br><br><br>
