--- a/inyro/main2.html
+++ b/inyro/main2.html
@@ -62,27 +62,33 @@ ul li a:after{
   <body>
     <div id="menu">
   <ul id="menu-list">
-      <li> <a id="li1" onclick="changeImg1()">내눈!</a></li>
-  	  <li> <a id="li2" onclick="changeImg2()">골라하비</a></li>
-  	  <li> <a id="li2" onclick="changeImg3()">뚜벅서울</a></li>
-  	  <li> <a id="li3" onclick="changeImg4()">이니로그램</a></li>
+      <li> <a id="li1" onclick="change1()">내눈!</a></li>
+  	  <li> <a id="li2" onclick="change2()">골라하비</a></li>
+  	  <li> <a id="li2" onclick="change3()">뚜벅서울</a></li>
+  	  <li> <a id="li3" onclick="change4()">이니로그램</a></li>
    </ul>
    <div id="menu-line"></div>
    <div class="container">
-    <img id="img" src="apple.jpg" />
+    <img id="img" width="350px" height="350px" src="apple.jpg" />
+    <input type='text' id='text' style="width:350px;height:350px;font-size:15px;" value='내눈 설명!'/>
+
   </div>
   <script>
-    function changeImg1() {
+    function change1() {
       document.getElementById("img").src = "apple.jpg";
+      document.getElementById("text").value = '내눈! 설명';
     }
-    function changeImg2() {
+    function change2() {
       document.getElementById("img").src = "ddoong.png";
+      document.getElementById("text").value = '골라하비 설명';
     }
-    function changeImg3() {
+    function change3() {
       document.getElementById("img").src = "jingjing.jpg";
+      document.getElementById("text").value = '뚜벅서울 설명';
     }
-    function changeImg4() {
+    function change4() {
       document.getElementById("img").src = "spongebob-image.jpg";
+      document.getElementById("text").value = '이니로그램 설명';
     }
   </script>
 </div>
