--- a/inyro/main2.html
+++ b/inyro/main2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="http://localhost/inyro/yunjinbar.css">
 
-    <title>바</title>
+    <title>main2</title>
 
     <!-- <style media="screen">
       html, body, div {
@@ -61,15 +61,18 @@ ul li a:after{
   </head>
   <body>
     <div id="menu">
-  <ul id="menu-list">
+  <ul id="menu-list" style="margin:50px;">
       <li> <a id="li1" onclick="change1()">내눈!</a></li>
+      <li> <a>|</a></li>
   	  <li> <a id="li2" onclick="change2()">골라하비</a></li>
+      <li> <a>|</a></li>
   	  <li> <a id="li2" onclick="change3()">뚜벅서울</a></li>
+      <li> <a>|</a></li>
   	  <li> <a id="li3" onclick="change4()">이니로그램</a></li>
    </ul>
    <div id="menu-line"></div>
    <div class="container">
-    <img id="img" width="350px" height="350px" src="apple.jpg" />
+    <img id="img" width="350px" height="350px" align='top' src="apple.jpg" />
     <input type='text' id='text' style="width:350px;height:350px;font-size:15px;" value='내눈 설명!'/>
 
   </div>
