Main, main1.html

--- a/inyro/Main.html
+++ b/inyro/Main.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>비밀번호 확인</title>
+    <title>Inyro</title>
     <style media="screen">
       @import url(inyro.css);
+      @import url(menubar.css);
     </style>
     <header>
       <h1>Inyro</h1>
@@ -16,17 +17,13 @@
     </header>
   </head>
   <body>
-    <div class="container">
-      <form action="myongyeon9.html">
-        <br><br><br>
-        <h3>비밀번호 확인</h3>
-        <!-- <label for="usrname">Username</label>
-        <input type="text" id="usrname" name="usrname" required> -->
-        <label for="psw">Password</label>
-        <input type="password" id="psw" name="psw">
-        <input type="submit" value="ENTER">
-      </form>
-    </div>
-
+    <br><br><br>
+      <div class="topnav">
+        <a class="active" href="#introduction">Introduction</a>
+        <a href="#news">News</a>
+        <a href="#calender">Calender</a>
+        <a href="#about">About</a>
+      </div>
+      <br>
   </body>
 </html>
