--- a/inyro/myongyeon7.html
+++ b/inyro/myongyeon7.html
@@ -5,6 +5,7 @@
   <title>개인정보</title>
   <style media="screen">
     @import url(inyro.css);
+    @import url(menubar.css);
   </style>
   <header>
     <h1>Inyro</h1>
@@ -16,11 +17,11 @@
   </header>
   </head>
   <body>
-        <div class="container">
+        <div class="container" margin=10px>
           <form name="memInfor" method="post">
-
             <div class="row">
               <div class="col-50">
+                <br><br><br>
                 <h3>개인정보 수정</h3>
                 <label for="id"> ID</label>
                 <input type="text" id="id" name="id" value="auddus16" disabled><br>
