--- a/inyro/main1.html
+++ b/inyro/main1.html
@@ -3,29 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Inyro 소개</title>
-    <style media="screen">
-      @import url(inyro.css);
-    </style>
-    <header>
-      <h1>Inyro</h1>
-      <nav>
-        <span onclick="location.href='yunjin2.html'">로그인</span>
-        <span onclick="location.href='yunjin5.html'">회원가입</span>
-        <span onclick="location.href='myongyeon7.html'">프로필</span>
-      </nav>
-    </header>
-    <div class="topnav">
-      <a class="active" href="#introduction">Introduction</a>
-      <a href="#news">News</a>
-      <a href="#calender">Calender</a>
-      <a href="#about">About</a>
-    </div>
   </head>
   <body>
-    <br>
-    <img src="introduce.png" style="float:left;">
-    <div style="float:right;">
+  <img src="introduce.png" align="middle" style="float:left;">
+    <div style="float:left;">
       Inyro는 상명대학교 코딩 동아리입니다. 아주 좋군요.
      </div>
+
   </body>
 </html>
