--- a/inyro/main2.html
+++ b/inyro/main2.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="http://localhost/inyro/yunjinbar.css">
+    <style media="screen">
+      @import url(yunjinbar.css);
+    </style>
 
     <title>main2</title>
 
