--- a/inyro/Main.html
+++ b/inyro/Main.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Inyro</title>
     <style media="screen">
-      @import url(inyro.css);
+      @import url(inyrobar.css);
       @import url(menubar.css);
     </style>
     <header>
