--- a/inyro/myongyeon9.html
+++ b/inyro/myongyeon9.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   <title>개인정보수정</title>
   <style media="screen">
-    @import url(inyro.css);
+    @import url(inyrobar.css);
   </style>
   <header>
     <h1>Inyro</h1>
