--- a/inyro/myongyeon7.html
+++ b/inyro/myongyeon7.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   <title>개인정보</title>
   <style media="screen">
-    @import url(inyro.css);
+    @import url(inyrobar.css);
     @import url(menubar.css);
   </style>
   <header>
