--- a/inyro/myongyeon8_modify.html
+++ b/inyro/myongyeon8_modify.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>비밀번호 확인</title>
     <style media="screen">
-      @import url(inyro.css);
+      @import url(inyrobar.css);
     </style>
     <header>
       <h1>Inyro</h1>
