--- a/inyro/yejin13.html
+++ b/inyro/yejin13.html
@@ -3,27 +3,28 @@
   <head>
 <meta charset="utf-8">
 <style>
-  @import url(inyro.css);
-  @import url(menubar.css);
+  @import url(inyrobar.css);
   @import url(writeform.css);
 </style>
-<header>
-  <h1>Inyro</h1>
-  <nav>
-    <span onclick="location.href='yunjin2.html'">로그인</span>
-    <span onclick="location.href='yunjin5.html'">회원가입</span>
-    <span onclick="location.href='myongyeon7.html'">프로필</span>
-  </nav>
-</header>
+
   </head>
-  <body>
-    <div class="topnav">
+<body>
+  <header>
+    <h1>Inyro</h1>
+      <nav>
+        <span onclick="location.href='yunjin2.html'">로그인</span>
+        <span onclick="location.href='yunjin5.html'">회원가입</span>
+        <span onclick="location.href='myongyeon7.html'">프로필</span>
+      </nav>
+  </header>
+  <!-- <br><br><br>
+  <div class="topnav">
       <a class="active" href="#introduction">Introduction</a>
       <a href="#news">News</a>
       <a href="#calender">Calender</a>
       <a href="#about">About</a>
-    </div>
-
+  </div> -->
+<br> <br> <br>
     <div class="container">
   <form id="mybutton" action="action_page.php">
     <h3>글작성하기</h3>
