--- a/inyro/yunjin2.html
+++ b/inyro/yunjin2.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>로그인</title>
 <style>
-  @import url(inyro.css);
+  @import url(inyrobar.css);
   @import url(menubar.css);
 </style>
 <header>
@@ -26,9 +26,9 @@
   </head>
   <body>
     <br><br><br>
-<h3>로그인</h3>
+<h3 align='middle'>로그인</h3>
 <hr>
-<div class="container">
+<div class="container" align='middle'>
     <label for="id"><b>Id</b></label>
     <input type="text" placeholder="아이디" name="id" required>
     <br>
