--- a/inyro/yunjin3.html
+++ b/inyro/yunjin3.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>아이디 찾기</title>
 <style>
-  @import url(inyro.css);
+  @import url(inyrobar.css);
 </style>
 <header>
   <h1>Inyro</h1>
@@ -37,6 +37,7 @@
     <br>
     <hr>
     <p>아이디는 ****** 입니다.</p>
+    <br>
 
     <button type="submit" onclick="location.href='yunjin2.html'">로그인하기</button>
 
