--- a/inyro/main3.html
+++ b/inyro/main3.html
@@ -2,12 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="http://localhost/inyro/yunjinbar.css">
+    <style media="screen">
+      @import url(yunjinbar.css);
+    </style>
 
     <title>main3</title>
 
   </head>
   <body>
+    <div class="container">
+     <img id="img" width="350px" height="350px" align='top' src="apple.jpg" />
+     <input type='text' id='text' style="width:350px;height:350px;font-size:15px;" value='내눈 설명!'/>
+
+   </div>
     <div id="menu">
   <ul id="menu-list" style="margin:50px;">
       <li> <a id="li1" onclick="change1()">내눈!</a></li>
@@ -19,11 +26,6 @@
   	  <li> <a id="li3" onclick="change4()">이니로그램</a></li>
    </ul>
    <div id="menu-line"></div>
-   <div class="container">
-    <img id="img" width="350px" height="350px" align='top' src="apple.jpg" />
-    <input type='text' id='text' style="width:350px;height:350px;font-size:15px;" value='내눈 설명!'/>
-
-  </div>
   <script>
     function change1() {
       document.getElementById("img").src = "apple.jpg";
