--- a/inyro/yunjin4.html
+++ b/inyro/yunjin4.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>비밀번호 찾기</title>
 <style>
-  @import url(inyro.css);
+  @import url(inyrobar.css);
 </style>
 <header>
   <h1>Inyro</h1>
