--- a/inyro/yj13.html
+++ b/inyro/yj13.html
@@ -3,16 +3,10 @@
 <head>
   <meta charset="utf-8">
   <style>
-    @import url(bar.css);
-    @import url(writeform.css);
+    @import url(inyrobar.css);
+    /* @import url(writeform.css); */
   </style>
 </head>
-
-
-
-
-
-
 <body>
   <header>
     <h1>Inyro</h1>
