--- a/inyro/yejin12.html
+++ b/inyro/yejin12.html
@@ -3,7 +3,7 @@
   <head>
 <meta charset="utf-8">
 <style>
-  @import url(inyro222.css);
+  @import url(inyrobar.css);
   @import url(menubarpost.css);
 </style>
 <script src="menubarpost.js"></script>
@@ -14,15 +14,14 @@ document.addEventListener("DOMContentLoaded", function(event) {
 </script>
   </head>
   <body>
-
-<div class="header">
+<header>
   <h1>Inyro</h1>
   <nav>
     <span onclick="location.href='yunjin2.html'">로그인</span>
     <span onclick="location.href='yunjin5.html'">회원가입</span>
     <span onclick="location.href='myongyeon7.html'">프로필</span>
   </nav>
-</div>
+</header>
 
 <br> <br> <br> <br>
 <!-- Tab links -->
@@ -35,7 +34,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 <!-- Tab content -->
 <div id="New" class="tabcontent">
   <h3>공지</h3>
-  <button onclick="location.href='yejin13.html'">갤러리</button>
+  <button onclick="location.href='yejin13.html'">작성하기</button>
   <p>
     <ol>
       <li>NAME</li>
@@ -56,6 +55,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 
 <div id="Post" class="tabcontent">
   <h3>게시판</h3>
+  <button onclick="location.href='yejin13.html'">작성하기</button>
   <p>
     <ol>
     <li>NAME</li>
@@ -76,7 +76,16 @@ document.addEventListener("DOMContentLoaded", function(event) {
 
 <div id="Photo" class="tabcontent">
   <h3>갤러리</h3>
-  <p>Tokyo is the capital of Japan.</p>
+  <button onclick="location.href='yejin13.html'">작성하기</button>
+  <p></p>
+  <form>
+    <select name="select">
+      <option value="1" selected>제목</option>
+      <option value="2">작성자</option>
+    </select>
+    <input type="search" placeholder="입력하세요.">
+    <input type="button" value="검색하기">
+  </form>
 </div>
 
   </body>
