--- a/inyro/yejin13.html
+++ b/inyro/yejin13.html
@@ -1,73 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <style>
-    @import url(bar.css);
-    @import url(writeform.css);
-  </style>
-</head>
-
-
-
-
-
-
-<body>
-  <header>
-    <h1>Inyro</h1>
+  <head>
+<meta charset="utf-8">
+<style>
+  @import url(inyrobar.css);
+</style>
+  </head>
+  <body>
+    <header>
+      <h1>Inyro</h1>
       <nav>
         <span onclick="location.href='yunjin2.html'">로그인</span>
         <span onclick="location.href='yunjin5.html'">회원가입</span>
         <span onclick="location.href='myongyeon7.html'">프로필</span>
       </nav>
-  </header>
-
-  <!-- <br><br><br>
-  <div class="topnav">
-      <a class="active" href="#introduction">Introduction</a>
-      <a href="#news">News</a>
-      <a href="#calender">Calender</a>
-      <a href="#about">About</a>
-  </div> -->
-<br> <br> <br>
-    <div class="container">
-  <form id="mybutton" action="action_page.php">
-    <h3>글작성하기</h3>
-    <div class="row">
-      <div class="col-25">
-        <label for="fname">이름</label>
-      </div>
-      <div class="col-75">
-        <input type="text" id="fname" name="firstname" placeholder="이름을 입력하세요.">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-25">
-        <label for="country">종류</label>
-      </div>
-      <div class="col-75">
-        <select id="country" name="country">
-          <option value="australia" selected>공지</option>
-          <option value="canada">게시판</option>
-          <option value="usa">갤러리</option>
-        </select>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-25">
-        <label for="subject">내용</label>
-      </div>
-      <div class="col-75">
-        <textarea id="subject" name="subject" placeholder="내용을 입력하세요." style="height:100px"></textarea>
-      </div>
-    </div>
-    <div class="row">
-      <input type="submit" value="Submit">
-    </div>
-  </form>
-</div>
-
-
+    </header>
+    <br><br><br><br><br>
+<form>
+  <fieldset>
+    <legend>글 작성하기</legend>
+    이름 : <input type="text" placeholder="이름을 입력하세요."> <br>
+    종류 : <select name="option">
+      <option value="1" selected>공지</option>
+      <option value="2">게시판</option>
+      <option value="3">갤러리</option>
+    </select> <br>
+    <textarea cols="30" rows="10" placeholder="내용을 입력하세요."></textarea> <br>
+    <button onclick="location.href='yejin12.html'">등록하기</button>
+  </fieldset>
+</form>
   </body>
 </html>
