--- a/inyro/yejin13.html
+++ b/inyro/yejin13.html
@@ -16,18 +16,17 @@
       </nav>
     </header>
     <br><br><br><br><br>
-<form>
-  <fieldset>
-    <legend>글 작성하기</legend>
-    이름 : <input type="text" placeholder="이름을 입력하세요."> <br>
-    종류 : <select name="option">
-      <option value="1" selected>공지</option>
-      <option value="2">게시판</option>
-      <option value="3">갤러리</option>
-    </select> <br>
-    <textarea cols="30" rows="10" placeholder="내용을 입력하세요."></textarea> <br>
-    <button onclick="location.href='yejin12.html'">등록하기</button>
-  </fieldset>
-</form>
+<form align='middle'>
+  <pre>
+      <legend>글 작성하기</legend>
+      이름 : <input type="text" placeholder="이름을 입력하세요."> <br>
+      종류 : <select name="option">
+        <option value="1" selected>공지</option>
+        <option value="2">게시판</option>
+        <option value="3">갤러리</option>
+      </select> <br>
+      <textarea cols="70" rows="40" placeholder="내용을 입력하세요."></textarea> <br>
+      <button onclick="location.href='yejin12.html'">등록하기</button>
+  </pre>
   </body>
 </html>
