명연: Main연결, main1사진변경, main4추가

--- a/inyro/Main.html
+++ b/inyro/Main.html
@@ -18,12 +18,34 @@
   </head>
   <body>
     <br><br><br>
+    <nav>
       <div class="topnav">
         <a class="active" href="#introduction">Introduction</a>
-        <a href="#news">News</a>
-        <a href="#calender">Calender</a>
+        <a href="#activity">Activity</a>
         <a href="#about">About</a>
+        <a href="#executive">Executive</a>
       </div>
+    </nav>
       <br>
+		<section id="introduction" class="section1">
+			<div align="center">
+				<iframe id="introduction" src="main1.html" width="1400" height="800" frameborder="0"></iframe>
+			</div>
+		</section>
+		<section id="activity" class="section2">
+			<div align="center">
+					<iframe id="main2" src="main2.html" width="1400" height="800" frameborder="0"></iframe>
+			</div>
+		</section>
+		<section id="about" class="section3">
+			<div align="center">
+					<iframe id="main3" src="main3.html" width="1400" height="800" frameborder="0"></iframe>
+			</div>
+		</section>
+		<section id="executive" class="section4">
+			<div align="center">
+					<iframe id="main4" src="main4.html" width="1400px" height="800px" frameborder="0"></iframe>
+			</div>
+		</section>
   </body>
 </html>
