--- a/inyro/main1.html
+++ b/inyro/main1.html
@@ -2,13 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Inyro 소개</title>
+    <title></title>
   </head>
   <body>
-  <img src="introduce.png" align="middle" style="float:left;">
-    <div style="float:left;">
-      Inyro는 상명대학교 코딩 동아리입니다. 아주 좋군요.
-     </div>
+    <nav>
+      <h1 align="center">Inyro 소개</h1>
+    </nav>
+<section style="margin-top:80px;">
+  <img src="main1_1.png" width="680px" height="500px" style="float:left;">
 
+  <img src="main1_2.png" width="680px" height="500px" style="float:right;" >
+</section>
   </body>
 </html>
