--- a/inyro/main2.html
+++ b/inyro/main2.html
@@ -74,25 +74,25 @@ ul li a:after{
    </ul>
    <div id="menu-line"></div>
    <div class="container">
-    <img id="img" width="350px" height="350px" align='top' src="apple.jpg" />
+    <img id="img" width="350px" height="600px" float='left' style="vertical-align:middle" src="myeyes.png" />
     <input type='text' id='text' style="width:350px;height:350px;font-size:15px;" value='내눈 설명!'/>
 
   </div>
   <script>
     function change1() {
-      document.getElementById("img").src = "apple.jpg";
+      document.getElementById("img").src = "myeyes.png";
       document.getElementById("text").value = '내눈! 설명';
     }
     function change2() {
-      document.getElementById("img").src = "ddoong.png";
+      document.getElementById("img").src = "golla.png";
       document.getElementById("text").value = '골라하비 설명';
     }
     function change3() {
-      document.getElementById("img").src = "jingjing.jpg";
+      document.getElementById("img").src = "ddubuck.png";
       document.getElementById("text").value = '뚜벅서울 설명';
     }
     function change4() {
-      document.getElementById("img").src = "spongebob-image.jpg";
+      document.getElementById("img").src = "inyrogram.png";
       document.getElementById("text").value = '이니로그램 설명';
     }
   </script>
