--- a/inyro/main3.html
+++ b/inyro/main3.html
@@ -11,7 +11,7 @@
   </head>
   <body>
   <div align='center'>
-    <iframe id="frame" src="main3_1.html" width="700" height="500"></iframe>
+    <iframe id="frame" src="main3_1.html" width="700" height="500" frameborder="0"></iframe>
   </div>
     <div id="menuX" align='center'>
   <ul id="menu-list" style="margin:50px;">
