--- a/inyro/main3_1.html
+++ b/inyro/main3_1.html
@@ -19,20 +19,20 @@
   	  <li> <a id="li3" onclick="change3()">친목</a></li>
    </ul>
    <div id="menu-line"></div>
-   <div class="container" align='center' left="100px">
-    <img id="img" width="350px" height="350px" align='top' src="apple.jpg" />
-    <input type='button' id='more' style="font-size:15px;" value='더보기'/>
+   <div class="container" align='center'>
+    <img id="img" width="550px" height="350px" align='top' src="inside.png" />
+    <!-- <input type='button' id='more' style="font-size:15px;" value='더보기' onclick="parent.location.href='activityintro1.html'"/> -->
 
   </div>
   <script>
     function change1() {
-      document.getElementById("img").src = "apple.jpg";
+      document.getElementById("img").src = "inside.png";
     }
     function change2() {
-      document.getElementById("img").src = "ddoong.png";
+      document.getElementById("img").src = "outside.png";
     }
     function change3() {
-      document.getElementById("img").src = "jingjing.jpg";
+      document.getElementById("img").src = "friendship.png";
     }
   </script>
 </div>
