--- a/inyro/main3_3.html
+++ b/inyro/main3_3.html
@@ -10,18 +10,16 @@
 
   </head>
   <body>
-    <!-- <div id="menuX" align='center'>
+    <div id="menuX" align='center'>
   <ul id="menu-list" style="margin:50px;">
-      <li> <a id="li1" onclick="change1()">자유</a></li>
-      <li> <a>|</a></li>
-  	  <li> <a id="li2" onclick="change2()">과제 관련</a></li>
-      <li> <a>|</a></li>
-  	  <li> <a id="li3" onclick="change3()">QnA</a></li>
-   </ul> -->
+      <li> <a id="li1"></a></li>
+  	  <li> <a id="li2"></a></li>
+  	  <li> <a id="li3"></a></li>
+   </ul>
    <div id="menu-line"></div>
    <div class="container" align='center'>
-    <img id="img" width="350px" height="350px" align='top' src="gallery.jpg" />
-    <input type='button' id='more' style="font-size:15px;" value='더보기'/>
+    <img id="img" width="350px" height="350px" align='top' src="out1.PNG" />
+    <input type='button' id='more' style="font-size:15px;" value='더보기' onclick="parent.location.href='gallery.html'"/>
 
   <!-- </div>
   <script>
