명연 비번확인 수정

--- a/inyro/Main.html
+++ b/inyro/Main.html
@@ -8,7 +8,7 @@
       @import url(menubar.css);
     </style>
     <header>
-      <h1>Inyro</h1>
+      <h1 onclick="location.href='Main.html'">Inyro</h1>
       <nav>
         <span onclick="location.href='yunjin2.html'">로그인</span>
         <span onclick="location.href='yunjin5.html'">회원가입</span>
@@ -34,7 +34,7 @@
 		</section>
 		<section id="activity" class="section2">
 			<div align="center">
-					<iframe id="main2" src="main2.html" width="1400" height="1000" frameborder="0"></iframe>
+					<iframe id="main2" src="main2.html" width="1400" height="900" frameborder="0"></iframe>
 			</div>
 		</section>
 		<section id="about" class="section3">
