--- a/inyro/myongyeon7.html
+++ b/inyro/myongyeon7.html
@@ -8,7 +8,7 @@
     @import url(menubar.css);
   </style>
   <header>
-    <h1>Inyro</h1>
+    <h1 onclick="location.href='Main.html'">Inyro</h1>
     <nav>
       <span onclick="location.href='yunjin2.html'">로그인</span>
       <span onclick="location.href='yunjin5.html'">회원가입</span>
@@ -23,19 +23,19 @@
               <div class="col-50">
                 <br><br><br>
                 <h3>개인정보 수정</h3>
-                <label for="id"> ID</label>
+                <label for="id"><b> ID</b></label>
                 <input type="text" id="id" name="id" value="auddus16" disabled><br>
 
-                <label for="name"> 이름</label>
+                <label for="name"><b> 이름</b></label>
                 <input type="text" id="name" name="name" value="황명연"disabled><br>
 
-                <label for="email"> Email</label>
+                <label for="email"><b> Email</b></label>
                 <input type="text" id="email" name="email" value="auddus16@naver.com"disabled><br>
 
-                <label for="studentNum"> 학번</label>
+                <label for="studentNum"><b> 학번</b></label>
                 <input type="text" id="studentNum" name="studentNum" value="201811008"disabled><br>
 
-                <label for="major"> 학과</label>
+                <label for="major"><b> 학과</b></label>
                 <select class="" name="major" disabled>
                   <option value="컴퓨터과학과" selected>컴퓨터과학과</option>
                   <option value="의류학과">의류학과</option>
@@ -44,12 +44,12 @@
                   <option value="전기공학과">전기공학과</option>
                 </select><br>
 
-                  <label for="check1"> 재학생</label>
+                  <label for="check1"><b> 재학생</b></label>
                   <input type="radio" name="check1" id="check1" value="1" disabled><br>
-                  <label for="check2"> 졸업생</label>
+                  <label for="check2"><b> 졸업생</label>
                   <input type="radio" name="check2" id="check2" value="2"><br>
 
-                  <label for="checkcode"> 확인코드</label>
+                  <label for="checkcode"><b> 확인코드</b></label>
                   <input type="text" id="checkcode" name="checkcode" value="CS0020" disabled><br>
                   <input type="button" name="modify" value="수정" onclick="location.href='myongyeon8_modify.html'">
                   <input type="button" name="withdraw" value="탈퇴" onclick="location.href='myongyeon8_withdraw.html'">
