--- a/inyro/myongyeon9.html
+++ b/inyro/myongyeon9.html
@@ -7,7 +7,7 @@
     @import url(inyrobar.css);
   </style>
   <header>
-    <h1>Inyro</h1>
+    <h1 onclick="location.href='Main.html'">Inyro</h1>
     <nav>
       <span onclick="location.href='yunjin2.html'">로그인</span>
       <span onclick="location.href='yunjin5.html'">회원가입</span>
@@ -31,19 +31,19 @@
               <div class="col-50">
                 <br><br><br>
                 <h3>개인정보 수정</h3>
-                <label for="id"> ID</label>
+                <label for="id"><b> ID</b></label>
                 <input type="text" id="id" name="id" value=getId><br>
 
-                <label for="name"> 이름</label>
+                <label for="name"><b> 이름</b></label>
                 <input type="text" id="name" name="name" value=getName><br>
 
-                <label for="email"> Email</label>
+                <label for="email"><b> Email</b></label>
                 <input type="text" id="email" name="email" value=getEmail ><br>
 
-                <label for="studentNum"> 학번</label>
+                <label for="studentNum"><b> 학번</b></label>
                 <input type="text" id="studentNum" name="studentNum" value=getStnum><br>
 
-                <label for="major"> 학과</label>
+                <label for="major"><b> 학과</b></label>
                 <select class="" name="major">
                   <option value="1" selected>컴퓨터과학과</option>
                   <option value="2">의류학과</option>
@@ -52,12 +52,12 @@
                   <option value="5">전기공학과</option>
                 </select><br>
 
-                  <label for="check1"> 재학생</label>
+                  <label for="check1"><b> 재학생</b></label>
                   <input type="radio" name="check1" id="check1" value="1"><br>
-                  <label for="check2"> 졸업생</label>
+                  <label for="check2"><b> 졸업생</b></label>
                   <input type="radio" name="check2" id="check2" value="2"><br>
 
-                  <label for="checkcode"> 확인코드</label>
+                  <label for="checkcode"><b> 확인코드</b></label>
                   <input type="text" id="checkcode" name="checkcode" value="CS0020"><br>
                   <input type="submit" name="submit" value="수정완료">
               </div>
