--- a/inyro/main3.html
+++ b/inyro/main3.html
@@ -11,10 +11,10 @@
   </head>
   <body>
   <div align='center'>
-    <iframe id="frame" src="main3_1.html" width="700" height="500" frameborder="0"></iframe>
+    <iframe id="frame" src="main3_1.html" width="830" height="530" frameborder="0"></iframe>
   </div>
     <div id="menuX" align='center'>
-  <ul id="menu-list" style="margin:50px;">
+  <ul id="menu-list"/>
       <li> <a id="li1" onclick="change1()">활동소개</a></li>
       <li> <a>|</a></li>
   	  <li> <a id="li2" onclick="change2()">게시판</a></li>
