--- a/inyro/yunjin3.html
+++ b/inyro/yunjin3.html
@@ -7,7 +7,7 @@
   @import url(inyrobar.css);
 </style>
 <header>
-  <h1>Inyro</h1>
+  <<h1 onclick="location.href='Main.html'">Inyro</h1>
   <nav>
     <span onclick="location.href='yunjin2.html'">로그인</span>
     <span onclick="location.href='yunjin5.html'">회원가입</span>
