--- a/inyro/main3_1.html
+++ b/inyro/main3_1.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="menuX" align='center'>
-  <ul id="menu-list" style="margin:50px;">
+  <ul id="menu-list">
       <li> <a id="li1" onclick="change1()">교내</a></li>
       <li> <a>|</a></li>
   	  <li> <a id="li2" onclick="change2()">교외</a></li>
@@ -20,7 +20,7 @@
    </ul>
    <div id="menu-line"></div>
    <div class="container" align='center'>
-    <img id="img" width="550px" height="350px" align='top' src="inside.png" />
+    <img id="img" width="650px" height="430px" align='top' src="inside.png" />
     <!-- <input type='button' id='more' style="font-size:15px;" value='더보기' onclick="parent.location.href='activityintro1.html'"/> -->
 
   </div>
