--- a/inyro/main3_2.html
+++ b/inyro/main3_2.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="menuX" align='center'>
-  <ul id="menu-list" style="margin:50px;">
+  <ul id="menu-list">
       <li> <a id="li1" onclick="change1()">자유</a></li>
       <li> <a>|</a></li>
   	  <li> <a id="li2" onclick="change2()">과제 관련</a></li>
@@ -20,8 +20,8 @@
    </ul>
    <div id="menu-line"></div>
    <div class="container" align='center'>
-    <img id="img" width="350px" height="350px" align='top' src="sangmyung.jpg" />
-    <input type='button' id='more' style="font-size:15px;" value='더보기'/>
+    <img id="img" width="430px" height="430px" align='top' src="sangmyung.jpg" />
+    <input type='button' id='more' style="font-size:15px;" value='게시판 더보기'/>
 
   </div>
   <script>
