--- a/inyro/main1.html
+++ b/inyro/main1.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <nav>
-      <h1 align="center">Inyro 소개</h1>
+      <h1 align="center" style="font-size:30px; font-weight: bold;">INYRO INTRODUCTION</h1>
     </nav>
 <section style="margin-top:80px;">
   <img src="main1_1.png" width="680px" height="500px" style="float:left;">
