--- a/inyro/main4.html
+++ b/inyro/main4.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <nav>
-      <h1 align="center">Inyro 임원진</h1>
+      <h1 align="center" style="font-size:30px; font-weight: bold;">INYRO EXECUTIVE</h1>
     </nav>
 <section style="margin-top:50px; text-align:center;" >
   <img src="main4.png" width="1200px" height="600px">
