--- a/inyro/main2.html
+++ b/inyro/main2.html
@@ -62,8 +62,11 @@ ul li a:after{
 
   </head>
   <body>
+    <nav>
+      <h1 align='center' style="font-size: 30px; font-weight: bold">INYRO ACTIVITY</h1>
+    </nav>
     <div id="menu">
-  <ul id="menu-list" style="margin:50px;">
+  <ul id="menu-list" style="margin-bottom:50px">
       <li> <a id="li1" onclick="change1()">내눈!</a></li>
       <li> <a>|</a></li>
   	  <li> <a id="li2" onclick="change2()">골라하비</a></li>
