--- a/inyro/main3.html
+++ b/inyro/main3.html
@@ -10,6 +10,9 @@
 
   </head>
   <body>
+    <nav>
+      <h1 align='center' style="font-size: 30px; font-weight: bold">INYRO ABOUT</h1>
+    </nav>
   <div align='center'>
     <iframe id="frame" src="main3_1.html" width="830" height="530" frameborder="0"></iframe>
   </div>
