--- a/inyro/Main.html
+++ b/inyro/Main.html
@@ -29,12 +29,13 @@
       <br>
 		<section id="introduction" class="section1">
 			<div align="center">
-				<iframe id="introduction" src="main1.html" width="1400" height="800" frameborder="0"></iframe>
+				<iframe id="main1" src="main1.html" width="1400" height="800" frameborder="0"></iframe>
 			</div>
 		</section>
 		<section id="activity" class="section2">
 			<div align="center">
 					<iframe id="main2" src="main2.html" width="1400" height="900" frameborder="0"></iframe>
+          <!-- <input type="button" id="more" style="font-size:15px;" value="더보기" onclick="location.href='gallery.html'"> -->
 			</div>
 		</section>
 		<section id="about" class="section3">
@@ -44,7 +45,7 @@
 		</section>
 		<section id="executive" class="section4">
 			<div align="center">
-					<iframe id="main4" src="main4.html" width="1400px" height="800px" frameborder="0"></iframe>
+					<iframe id="main4" src="main4.html" width="1400" height="800" frameborder="0"></iframe>
 			</div>
 		</section>
   </body>
