--- a/inyro/main3_3.html
+++ b/inyro/main3_3.html
@@ -10,7 +10,21 @@
 
   </head>
   <body>
-    <div id="menuX" align='center'>
+    <div class="">
+      <div id="menuX" align='center'>
+    <ul id="menu-list">
+        <li> <a id="li1"></a></li>
+    	  <li> <a id="li2"></a></li>
+    	  <li> <a id="li3"></a></li>
+     </ul>
+     <div id="menu-line"></div>
+     <div class="container" align='center'>
+      <img id="img" width="430px" height="430px" align='top' src="out1.PNG" />
+    </div>
+  </div>
+  <input type='button' id='more' style="font-size:15px;float:right;" value='더보기' onclick="parent.parent.location.href='gallery.html'"/>
+</div>
+    <!-- <div id="menuX" align='center'>
   <ul id="menu-list">
       <li> <a id="li1"></a></li>
   	  <li> <a id="li2"></a></li>
@@ -18,8 +32,8 @@
    </ul>
    <div id="menu-line"></div>
    <div class="container" align='center'>
-    <img id="img" width="430px" height="430px" align='top' src="out1.PNG" />
-    <input type='button' id='more' style="font-size:15px;" value='더보기' onclick="parent.parent.location.href='gallery.html'"/>
+    <img id="img" width="430px" height="430px" align='top' src="out1.PNG" /> -->
+    <!-- <input type='button' id='more' style="font-size:15px;" value='더보기' onclick="parent.parent.location.href='gallery.html'"/> -->
 
   <!-- </div>
   <script>
