--- a/inyro/main3_2.html
+++ b/inyro/main3_2.html
@@ -10,7 +10,24 @@
 
   </head>
   <body>
-    <div id="menuX" align='center'>
+    <div class="">
+      <div id="menuX" align='center'>
+    <ul id="menu-list">
+        <li> <a id="li1" onclick="change1()">자유</a></li>
+        <li> <a>|</a></li>
+    	  <li> <a id="li2" onclick="change2()">과제 관련</a></li>
+        <li> <a>|</a></li>
+    	  <li> <a id="li3" onclick="change3()">QnA</a></li>
+     </ul>
+     <div id="menu-line"  align='center'></div>
+     <div class="container" align='center'>
+      <img id="img" width="430px" height="430px" src="sangmyung.jpg" />
+
+    </div>
+    </div>
+    <input type='button' id='more' style="font-size:15px;float:right;" value='게시판 더보기'/>
+  </div>
+    <!-- <div id="menuX" align='center'>
   <ul id="menu-list">
       <li> <a id="li1" onclick="change1()">자유</a></li>
       <li> <a>|</a></li>
@@ -18,12 +35,12 @@
       <li> <a>|</a></li>
   	  <li> <a id="li3" onclick="change3()">QnA</a></li>
    </ul>
-   <div id="menu-line"></div>
+   <div id="menu-line"  align='center'></div>
    <div class="container" align='center'>
-    <img id="img" width="430px" height="430px" align='top' src="sangmyung.jpg" />
-    <input type='button' id='more' style="font-size:15px;" value='게시판 더보기'/>
+    <img id="img" width="430px" height="430px" src="sangmyung.jpg" />
 
-  </div>
+  </div> -->
+  <!-- <input type='button' id='more' style="font-size:15px;" value='게시판 더보기'/> -->
   <script>
     function change1() {
       document.getElementById("img").src = "sangmyung.jpg";
@@ -36,5 +53,6 @@
     }
   </script>
 </div>
+<!-- <input type='button' id='more' style="font-size:15px;" value='게시판 더보기'/> -->
   </body>
 </html>
